--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,26 @@
 {
     "name": "talav/resource",
     "description": "Basic resource interfaces for PHP applications.",
-    "keywords": [
-        "symfony",
-        "bundle",
-        "user",
-        "php"
-    ],
+    "keywords": ["symfony", "bundle", "user", "php"],
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name" : "Talav",
+            "name": "Talav",
             "email": "support@talav.com"
         }
     ],
     "require": {
         "php": "^7.2",
-        "doctrine/common": "^2.6",
+        "doctrine/common": "^2.7",
         "gedmo/doctrine-extensions": "^2.4",
-        "pagerfanta/pagerfanta": "^1.0|^2.0"
+        "pagerfanta/pagerfanta": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.3",
-        "symfony/thanks": "^1.1",
-        "talav/coding-standard": "@dev"
+        "phpunit/phpunit": "^9.2",
+        "symfony/thanks": "^1.2",
+        "talav/coding-standard": "@dev",
+        "webfactory/doctrine-orm-test-infrastructure": "^1.7"
     },
     "autoload": {
         "psr-4": {
@@ -33,7 +29,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Talav\\Component\\Resource\\Tests\\": "/Tests/"
+            "Talav\\Component\\Resource\\Tests\\": "tests/"
         }
     },
     "extra": {
@@ -51,6 +47,7 @@
     ],
     "scripts": {
         "check-cs": "vendor/bin/ecs check src --ansi",
-        "fix-cs": "vendor/bin/ecs check src --fix --ansi"
+        "fix-cs": "vendor/bin/ecs check src --fix --ansi",
+        "rector": "vendor/bin/rector process --config vendor/talav/coding-standard/rector.yml"
     }
 }
